--- a/css/main.css
+++ b/css/main.css
@@ -13,3 +13,12 @@ label {
     padding-bottom: 1px;
     font-weight: bold;
 }
+
+.postImage{
+    width: 150px;
+    height: 150px;
+    border: 1px solid black;
+    border-radius: 10px;
+    padding: 2px;
+    margin: 2px;
+}
